docs/00_governance/architecture/v2.7.0/05_constitution.md
# 1. 헌법 (11개 조항, 절대 원칙)

**원본 출처**: v1.7.1 §1 (250–426)
**v2.7.0 Layer**: Core
**의존**: `00_core/01_primary.md`
**변경 이력**: v1.7.1 §1 원본 이관본을 v1.8.0·v1.9.0 보존, v2.0.0 MAJOR 승격 시 §3 강화 주석 + 제8조 SIM-Oriented Single Core 신설, v2.2.0 MAJOR 승격 시 §9 빅테크 정공법 + §10 비전 자율 결정 신설, v2.3.0 MINOR 승격 시 §10-6 자체 머지 의무 신설, v2.6.0 MINOR 승격 시 제11조 3액션 단일 책임 신설, v2.7.0 PATCH 승격 시 §9-7 코드 인코딩 정공법 신설.
**파일 경로**: `docs/00_governance/architecture/v2.7.0/05_constitution.md`

---

# 1. 헌법 (11개 조항, 절대 원칙)

헌법은 모든 설계 결정의 최상위 기준이다. 어떤 모듈·알고리즘·UX·비즈니스 결정도 이 11개 조항을 위반하면 즉시 폐기한다. **헌법은 토론 대상이 아니라 검증 대상이다.**

v1.3의 5개 조항을 100% 계승하고, v1.4에서 3조 정정·4조·6조 신설, v1.6에서 7조(디바이스 오리엔티드 거위) 명문화, v2.0.0에서 8조(SIM-Oriented Single Core), v2.2.0에서 9조(빅테크 정공법)·10조(비전 자율 결정), v2.6.0에서 11조(3액션 단일 책임) 신설로 현재 **11개 조항** 체계. v2.7.0은 §9-7 코드 인코딩 정공법 PATCH이며 조항 신설 0.

## 제1조 — Out-Bound Zero (사용자 데이터 외부 전송 금지)

사용자의 통화 기록, 연락처, SMS, 사용자 행동, 통화 상대 번호 등 **일체의 사용자 데이터는 우리(올랑방)가 운영하는 서버 또는 제3자 서버로 전송되지 않는다.** 모든 처리는 디바이스 내에서 완결된다.

**해석 규칙**:
- "우리 서버" = 올랑방이 운영하는 AWS Lambda, API Gateway, 자체 DB, 자체 영수증 검증 서버 등.
- "제3자 서버" = 사용자 데이터를 수집·분석하는 목적의 상용 서비스.
**허용 (검색 2축 매핑, 2026-04-29 v2.5.0)**:

- (축 1) **내부 NKB (온디바이스)**:
  - 사용자 본인 통화/문자/태그 이력 — 외부 송신 0
  - 가중치 W = 0.40
  - 헌법 §1·§2 정합

- (축 2) **외부 AI 검색 모드 (Custom Tab 사용자 직접 진입)**:
  - SIM 기준 AI 검색 후보군 자동 추출 (SimAiSearchRegistry)
  - **최소 2개 옵션 보장**
  - **고정 우선순위 없음** — 사용자 자율 결정 + 마지막 선택 기억
  - AI 검색 모드 인프라가 (구) 공공 신고 DB + 경쟁사 reverse lookup + 일반 검색 자체 통합
  - 가중치 W = 0.60

- **스토어 공식 API**: Google Play Billing, StoreKit 2 (변경 없음)

**SIM 기준 AI 검색 후보군** (SimAiSearchRegistry, v2.5.0 신설):

| SIM iso country | AI 검색 후보군 (최소 2개) |
|---|---|
| KR | Naver AI, Google AI Mode (udm=50), Bing Copilot |
| JP | Yahoo Japan AI, Google AI Mode, Bing Copilot |
| CN | Baidu AI, Bing Copilot |
| Global default | Google AI Mode, Bing Copilot |

후보군은 SimContextProvider가 결정. 사용자가 첫 사용 시 메뉴 선택, 이후 마지막 선택 default. 변경 가능.

**검색 입력 영역** (SearchInput sealed class, v2.5.0 신설):

- `SearchInput.PhoneNumber(value, simContext)` — 폰 번호 (Stage 1~3 본질)
- `SearchInput.Url(value, surfaceContext)` — URL/링크 (Stage 4 영역)
- `SearchInput.MessageBody(text, extractedUrls, extractedNumbers)` — SMS/메시지 본문 (Stage 4 영역)
- `SearchInput.AppPackage(packageName)` — 앱 패키지명 (MicCheck/CameraCheck/PushCheck)

**One Engine, N Inputs** (헌법 §7 정합) — 모든 input 타입에 대해 동일 2축 패턴.

**금지 (Out-Bound Zero 강화)**:
- 우리 자체 서버로 사용자 데이터 송신 (헌법 §1 핵심)
- AI answer engine API 직접 통합 (Perplexity Sonar 등 — 비용·일관성·헌법 §6 충돌)
- 경쟁사 비공식 API/scraper 통합 (Truecaller scraper 등 ToS 위반, AI Mode가 자체 통합)
- 4축 분리 가중치 합산 (v2.4.0 본문 폐기 — 과공학 + AI 인프라 우위)

**원칙**: 외부 검색은 모두 **Custom Tab 사용자 직접 진입**. API 통합 0, 우리 서버 0, 우리 비용 0. 사용자 데이터는 사용자 본인 의지로만 외부 송신.

v1.3 이래 불변. 절대 원칙. v2.5.0에서 검색 영역 2축 단순화 (대표님 2026-04-29 실측 + 결정).

## 제2조 — In-Bound Zero (외부 원문 영구 저장 금지)

디바이스가 외부 검색 엔진에서 받은 HTML, JSON, 검색 스니펫 등 **일체의 외부 원문은 메모리에서만 처리되고 즉시 폐기된다.** 디바이스 NKB(Number Knowledge Base)에는 원문이 아닌 **가공된 신호 카운트(featureCounts)만 저장된다.** rawSnippet 200자 등 어떤 형태의 부분 저장도 금지된다.

**해석 규칙**:
- 외부 HTML·JSON·텍스트 스니펫 → 메모리 내 분석 후 폐기
- featureCounts (예: `{SCAM_KEYWORD: 12, AD_KEYWORD: 3}`) → NKB 저장 가능
- 사용자 번호 E.164 식별자 → NKB 저장 가능 (식별자일 뿐 외부 원문 아님)

v1.3 이래 불변. 절대 원칙.

## 제3조 — 결정권 중앙집중 금지 (Decision Centralization Prohibited)

본 시스템은 **모든 판단의 결정권이 중앙(우리 서버·본사)에 집중되는 것을 금지한다.** 디바이스는 스스로 판단하는 1차 결정 주체이며, 중앙은 참고 신호와 업데이트만 제공할 수 있다.

### 3-1. 금지 대상 (해석 여지 없음)

- 중앙 서버가 "최종 정답"을 내려주는 구조 (예: 본사 API가 "이 번호 = 스팸"을 응답)
- 특정 입력 → 특정 출력이 중앙에 하드코딩된 결정 매핑 (예: "한국 SIM = 네이버 검색")
- 디바이스가 중앙 응답 없이는 판단 불가능한 구조 (예: NKB Miss 시 본사 fallback)

### 3-2. 허용 대상 (해석 여지 없음)

- 검색 엔진 **시드(seed) 후보 리스트**를 디바이스에 빌드 시 포함 (probe 대상 후보일 뿐, 매핑 아님)
- 키워드 사전 업데이트 (strings.xml의 scamKeywords 등 — 정적 데이터)
- Tier 가중치 업데이트 (Tier 1~4 검색 결과 신뢰도 — 정적 데이터)
- 모델 가중치 업데이트 (Softmax 가중치 — 정적 데이터)

**핵심 판별축**: "최종 결정을 누가 내리는가?"
- 중앙이 "이 번호는 스팸이다"를 내리면 → 위반
- 디바이스가 "내가 이 번호에 대해 probe한 결과 + 로컬 학습 결과 = 스팸"을 내리면 → 준수

v1.3 원문은 "No Curation: 본사 큐레이션 데이터 주입 금지"였다. v1.4에서 해석 여지를 제거하여 현행 조문으로 정정.

> **2026-04-27 강화 (v2.0.0)**: 결정권 중앙집중 금지는 **외부 서버 결정 금지**이며,
> 온디바이스 단일 코어 엔진(`:core:global-engine`)은 본 조 비대상이다.
> 모든 Surface가 동일 코어를 사용하는 것은 **일관성 보장**이며, 결정권 중앙집중이 아니다.
> v1.9.0에서 비전이 "Decision Engine 공유"를 위협 평가 Surface로 한정 해석한 것을 v2.0.0에서 정정한다 (§17 + §30 참조).

### 3-3. 소버린 강화 본문 (2026-04-29 v2.6.0)

본 앱은 사용자 디바이스로 수신되는 모든 데이터 (전화/문자/푸시/마이크/카메라/카드) 에 대한 **소버린(Sovereign, 통제권)을 사용자 본인에게 100% 귀속**시키는 것을 절대 원칙으로 한다.

따라서:

- **자동 차단 미포함** — 우리 앱은 사용자 명시 결정 없이 어떤 콜·문자·푸시도 자동 차단하지 않는다. Tier Danger 표시는 사용자에게 정보 제공일 뿐, 차단은 사용자가 명시적으로 [차단] 액션을 누른 경우에만 작동한다.
- **자동 거절 미포함** — `setRejectCall(true)` `setSilenceCall(true)` 등 시스템 자동 응답 API는 영구 미사용.
- **기본 전화 앱 권한 영구 미요청** — `ACTION_CHANGE_DEFAULT_DIALER` Intent / `RoleManager.ROLE_DIALER` 영구 미사용. 사용자가 쓰던 시스템 dialer (구글 폰 / 삼성 통화 / 통신사 dialer 등) 그대로 살린다.
- **시스템 dialer 미간섭** — 콜 풀스크린 UI / 통화 화면 / 부재중 알림 / 통화 기록 — 우리 앱 미관여.

**경쟁 포지션 명시**:

- Truecaller / Whoscall — 기본 전화 앱 대체 진영. **우리 미선택**.
- Hiya / Phone by Google — 시스템 dialer 살리고 보조 진영. **우리 정합**.

**시장 검증된 진영**: 두 진영 모두 글로벌 사용자 1억+ 보유. 우리는 사용자 소버린 철학으로 Hiya 진영 정합 + Hiya 대비 차별점 = 검색 2축 (NKB + AI 검색) + 사용자 자율 결정.

## 제4조 — 자가 작동 (Self-Operation)

본 시스템은 **중앙 없이도 멈추지 않는 상태**를 유지한다. 네트워크 단절, 서버 응답 실패, 공공 API 장애 등 어떤 외부 요인으로도 사용자의 기본 가치는 손실되지 않는다.

### 4-1. SLA 4단계 (자가 작동의 운영 정의)

| 레벨 | 상태 | 네트워크 | 외부 API | NKB | 사용자 경험 |
|---|---|---|---|---|---|
| L1 Full | 정상 | 연결 | 가용 | 가용 | 4속성 출력 + 실시간 probe 갱신 |
| L2 Degraded | 부분 장애 | 연결 | 일부 장애 | 가용 | 4속성 출력 (stale 플래그) |
| L3 Offline | 오프라인 | 단절 | 불가 | 가용 | **4속성 출력 (NKB Hit만)** ← **기준선** |
| L4 Catastrophic | NKB 손상 | 단절 | 불가 | 손상 | Cold Start 재실행 또는 기본값 반환 |

**헌법 기준선 = L3.** 즉 사용자가 어떤 환경에 있어도 L3 이상 경험이 보장되어야 한다. L4는 극단 상황이며 Cold Start 자가 복구 경로가 반드시 존재해야 한다.

### 4-2. L3에서 거위가 멈추지 않는 근거

- NKB는 디바이스 Local Room DB → 네트워크 없이도 조회 가능
- 4속성 출력은 NKB Hit만으로 산출 가능 (§8-6)
- Self-Discovery 결과(ClusterProfile)는 NKB에 영구 저장 → probe 실패해도 기존 값 사용

v1.4_disc 신설 조항.

## 제5조 — 정직성 (Honesty)

본 시스템은 **모든 설계 결정, 폐기 이력, 한계, 검증 결과를 문서화한다.** 숨기지 않는다.

### 5-1. 구체 의무

- 모든 패치(Patch NN)의 Before/After 본문을 문서에 포함한다 (§0-B-2).
- 외부 검증자 지적 사항을 숨기지 않고 채택·거부 사유와 함께 기록한다 (§0-B-1).
- 검증 불가 한계를 명시한다 (§0-D).
- 토론 과정에서 폐기된 안을 제안자 실명과 함께 기록한다 (§0-2).
- 사용자에게 "확실하지 않음"을 숨기지 않는다 (ambiguous 플래그, §8-1).

### 5-2. 위반 판정

- "추정 금지" 위반 (근거 없는 수치 주장)
- 외부 검증자 지적을 본문에 반영하지 않고 요약으로만 처리
- 패치 이력 누락
- 한계 로그 누락

v1.3 원문 계승. v1.4에서 구체 의무와 위반 판정을 명문화.

## 제6조 — 가격 정직성 (Pricing Honesty)

본 시스템의 가격은 **net 기준으로 측정·공개**한다. Apple/Google 수수료 30%, 부가세(VAT) 평균 10%, 환불 5%를 반영한 net ARPU를 KPI로 사용한다.

### 6-1. 현재 확정 가격

- **공식 구독료**: USD 2.49/월 단일 가격, 전세계 동일, 연간 가격 없음 (2026-04-22 대표님 확정)
- **net ARPU 계산**: gross $2.49 × (1 - 0.30 스토어) × (1 - 0.10 VAT) × (1 - 0.05 환불) ≈ **$1.49/월**
- **국가당 break-even MAU**: 월 $100K net 목표 / $1.49 = **67,114명 / 국가당** (전환율 3% 가정 시 MAU 2.24M)

### 6-2. 가격 변경 원칙

- KPI 매핑을 거부하지 않는다 (헌법 3조와 구분: KPI는 측정 도구이지 중앙 결정이 아니다).
- 가격은 대표님 승인 사항. 헌법 6조는 "정직한 측정"을 강제하지 "가격 자체"를 고정하지 않는다.
- 변경 시 0-A-2 가격 정책 변경 이력에 기록.

v1.4_disc 신설. v1.6.1에서 $2.49 확정 (본 v1.6.2 승계).

## 제7조 — 디바이스 오리엔티드 거위 (Device-Oriented Goose)

본 시스템은 **디바이스가 황금알을 낳는 거위**라는 은유를 설계 원칙으로 삼는다.

### 7-1. 비유의 정의

- **거위** = 디바이스 (온디바이스 Decision Engine + NKB + Self-Discovery)
- **황금알** = 사용자가 받는 판단 결과 (4속성: 위험도, 예상 손해, 손해 유형, 이유 설명)
- **거위를 잡는 행위** = 본사 서버로 사용자 데이터 수집, 중앙 매핑, 폐쇄형 판단 (1~3조 위반)
- **거위가 자가 증식** = NKB Self-Evolution, ClusterProfile 자가 생성 (§12)

### 7-2. 구현 원칙

- **본사 운영 0, 본사 매핑 0, 본사 데이터센터 0** (메모리 헌법 7대 원칙)
- 디바이스 = 모든 것 (검색·분석·판단·저장·학습 전부 온디바이스)
- 외부는 입력 소스일 뿐, 판단의 주체가 아니다 (제3조)
- 멀티 Surface 확장은 엔진을 N개로 늘리는 것이 아니라 **단일 엔진의 Surface를 N개로 늘리는 것** (§17 One Engine, N Surfaces)

### 7-3. 금지 구현 패턴

- 본사가 "사용자 번호 DB"를 운영하는 구조 → 위반
- 본사가 "이 번호 = 스팸"을 내려주는 API → 위반 (제3조)
- 본사가 "국가별 스팸 패턴"을 사전 매핑 → 위반
- 본사가 사용자 행동 로그를 수집 → 위반 (제1조)

### 7-4. 허용 구현 패턴

- 디바이스 Room DB(NKB)에 번호별 판단 결과 저장 → 허용 (디바이스 내부)
- 일반 검색 엔진에 번호 조회 → 허용 (검색 엔진은 제3자가 아닌 공개 인프라)
- 공공 공신력 API (KISA·경찰청·금감원) 조회 → 허용 (정부 공공 데이터)
- 스토어 공식 API (Play Billing·StoreKit 2) 호출 → 허용 (스토어 자체)
- Firebase Crashlytics·Analytics·FCM → 허용 (써드파티 관찰·전달 인프라, 사용자 데이터 수집 목적 아님)

v1.3 본문에 산재했던 "디바이스=자가발전기" 원칙을 v1.6에서 7조로 조문화. 메모리 헌법 7대 원칙(In-Bound Zero, Out-Bound Zero, 자율 작동 등)과 완전 정합.

---

## 1-1. 헌법 10조 상호 정합 표

모든 설계 결정은 10조 중 어느 조항에 해당하는가를 식별할 수 있어야 한다.

모든 설계 결정은 8조 중 **어느 조항에 해당하는가**를 식별할 수 있어야 한다. 복수 조항 해당 시 모두 준수해야 한다.

| 설계 결정 | 해당 조항 |
|---|---|
| 통화 번호를 디바이스에만 저장 | 1조 (Out-Bound Zero) |
| 검색 결과 스니펫을 메모리 후 즉시 폐기 | 2조 (In-Bound Zero) |
| NKB Miss 시 본사 fallback 금지 | 3조 (결정권 중앙집중 금지) |
| 네트워크 단절 시 NKB Hit만으로 4속성 출력 | 4조 (자가 작동 L3) |
| 폐기된 설계안을 문서에 실명 기록 | 5조 (정직성) |
| net ARPU $1.49 측정·공개 | 6조 (가격 정직성) |
| 본사 운영 0 / 매핑 0 / 데이터센터 0 | 7조 (디바이스 오리엔티드 거위) |
| 스토어 빌링만 사용, 자체 영수증 검증 서버 금지 | 1조 + 7조 |
| Google Programmable Search API 사용 | 1조 (제3자 아님, 공개 검색 인프라) |
| 일반 검색 쿼리에 사용자 번호 포함 | 1조 (공개 번호이므로 사용자 데이터 아님) |
| 통화·전화번호 양식 SIM `simCountryIso`로 결정 | 8조 (SIM-Oriented Single Core) |
| 모든 Surface가 `:core:global-engine` 단일 코어 사용 | 8조 + 7조 |
| `Locale.getDefault()` 직접 사용 (UI 언어 resolve 영역 외) | 8조 위반 |
| Surface별 자체 통화·국가 매핑 코드 | 8조 위반 |

## 1-2. 헌법 위반 판정 SOP

1. 설계·코드·문서 제출 시 자가 점검 체크리스트 실행 (8조 각각 Y/N).
2. 1개라도 N → 설계 폐기 또는 재작성.
3. Y/N 판정이 애매한 경우 → 비전에게 판정 요청 (§17 Rule 3).
4. 비전도 불명확 → 대표님에게 판정 요청.
5. 판정 결과는 0-B 감사 로그에 기록.

---

## 제8조 — SIM-Oriented Single Core (SIM 기준 단일 코어)

본 시스템은 **모든 국가별·지역별 차별화의 단일 진실원(Single Source of Truth)을 디바이스의 SIM 카드 정보로 한다.** 시스템 Locale, 사용자 입력 국가, 외부 IP 추론 등은 단일 진실원이 아니다.

### 8-1. 적용 영역 (SIM 그대로)

| 영역 | 단일 진실원 |
|---|---|
| 국가 결정 | SIM `simCountryIso` (ISO 3166-1 alpha-2) |
| 통신사 결정 | SIM `simOperator` (MCC + MNC) |
| 통화 (currency) | `countryIso` → ISO 4217 자동 매핑 |
| 전화번호 양식 | libphonenumber Region (`countryIso`) |
| 파싱 엔진 컨텍스트 | SIM 기반 `SimContext` |
| timezone | SIM 기반 추론 (또는 디바이스 timezone fallback) |

### 8-2. 비적용 영역 (사용자 선택 허용)

UI 언어는 SIM 기준이 default이지만 사용자가 다음 3단 중 선택 가능 (§29-3 본문 표 참조):

| 우선순위 | 기준 | 시나리오 |
|---|---|---|
| 1 (default) | SIM 기반 언어 추론 | 한국인 한국 SIM → 한국어 |
| 2 | 디바이스 시스템 언어 | 한국인 해외 SIM 사용 → 한국어 (시스템 그대로) |
| 3 | English | 다국적 사용자 → 만국 공통 |

UI 언어만 사용자 선택 가능. 통화·전화번호 양식·파싱 엔진은 SIM 그대로 적용한다.

### 8-3. 구현 강제 사항

- `:core:global-engine/sim-context/` 모듈이 `SimContext` 단일 진실원 제공
- 모든 Surface는 `SimContext` 통해 국가·통화·전화번호 양식 획득
- `Locale.getDefault()` 직접 사용 금지 (UI 언어 resolve 영역 외)
- SIM 부재 또는 변경 시 사용자 명시 동의 후 베이스 컨텍스트 재계산

### 8-4. SIM 변경 추적 (해외 여행·eSIM·교체 대응)

- 부팅 시 SIM 정보 비교 (이전 vs 현재)
- TelephonyManager 콜백 (런타임 SIM 변경)
- 새 SIM 컨텍스트 적용 / 기존 컨텍스트 유지 / 베이스데이터 초기화 — 사용자 3-옵션 선택 (§29-4)

### 8-5. SIM 부재 처리

WiFi-only 태블릿 또는 SIM 미장착:
- `countryIso` fallback: 디바이스 시스템 Locale country
- 사용자에게 명시: "SIM 미감지. 디바이스 설정 사용."
- 재SIM 장착 시 컨텍스트 재계산 동의 요청 (§29-5)

### 8-6. 위반 시

- 코드 리뷰 차단
- v2.0.0 이후 Surface별 자체 국가·통화 매핑 코드 발견 시 즉시 정정 PR
- 비전이 v1.9.0까지 Surface별 자체 매핑을 허용한 것은 v2.0.0에서 정정 (§17 + §30)

### 8-7. cross-ref

- §28 Initial Scan (SIM 기반 베이스 구축)
- §29 SIM-Oriented Single Core 본문
- §30 :core:global-engine 모듈 구조

v2.0.0 신설 조항. 비전이 v1.7.1~v1.9.0까지 SIM 기준을 명문화하지 않은 것을 정정한다.

---

## 제9조 — 빅테크 정공법 (Big Tech Standard Compliance)

본 앱의 모든 설계·구현·운영은 빅테크 정공법(Google, Apple, Meta, Microsoft, Amazon 등 글로벌 표준)을 기본으로 한다.

### 9-1. 언어·번역 정책

- `res/values/strings.xml` 영문 default만 유지.
- 다국어 번역 추가 작업 금지 (`res/values-ko`, `values-ja`, `values-zh-rCN` 등 수동 번역 파일 추가 안 함).
- OS 시스템 Locale 자동 처리 위임 (`AppCompatDelegate.setApplicationLocales`).
- `res/xml/locales_config.xml`은 OS 자동 번역 활성화 용도만.
- 사용자 디바이스가 자체 번역·표시 처리.

**근거**:
빅테크 코어 앱은 자체 번역 파일을 일일이 추가하지 않는다. OS 시스템 Locale + 사용자 디바이스가 자체 처리. 개발자가 `values-xx` 일일이 만들어 관리하는 것은 소규모·로컬 앱 방식.

**위반 사례**:
- "한국어 번역 P0 출시 전 작업" 같은 표현.
- `values-ko` 등 수동 번역 파일 추가 PR.

### 9-2. 운영 모델

- **외부 영업·계약·B2B 협상 0** (헌법 §1 Out-Bound Zero 정합).
- 오픈소스·공개 라이선스(CC0, CC-BY-SA, 공공누리 「제한 없음」 등) 정합 출처만 활용.
- 라이선스 정합 안 되면 활용 안 함 (단순 결정).
- 외부 회사·기관과 계약·파트너십 추진 금지.

**위반 사례**:
- "Whoscall ASI 공식 계약 검토" 같은 사업개발 트랙 제안.
- B2B 영업·파트너십 경로 워크오더.

### 9-3. 출시 정책

- **글로벌 단일 출시** (시장 분리 1차/2차 없음).
- SIM-Oriented Single Core (헌법 §8조)가 자동 적응.
- Play Store 단일 등록으로 190개국 동시 노출.
- iOS·Android는 동등 정식 플랫폼 (시간차만 허용, "별도 트랙" 분리 표현 금지).

**위반 사례**:
- "1차 한국+영어권, 2차 인도+동남아".
- "iOS v3.0.0 별도 트랙".

### 9-4. 코드 정공법

- 카드사·국가·언어 분기 코드 0 (정규식·ICU·ISO 표준만).
- 자체 시드 데이터 0 (사용자 주도 학습).
- 단일 코어 `:core:global-engine` 사용 (자체 파서 금지, 헌법 §8조 정합).
- `Locale.getDefault()` 직접 사용 금지 (UI 언어 영역 외).

### 9-5. 위반 시

- 위반 워크오더·PR 코드 리뷰 차단.
- 비전·외부 검증자 발견 시 즉시 정정.
- 메모리·헌법 cross-check 의무.

### 9-6. 검증·테스트 정책

빅테크 출시 정책(§9-3 글로벌 단일)을 충족하려면 다양성 검증이 단일 디바이스·단일 Locale 검증으로는 불충분하다. 본 절은 출시 전 필수 검증 매트릭스를 헌법으로 명문화.

**기본 도구**:
- **Gradle Managed Devices** (Android Gradle Plugin native): 로컬·CI 동등 실행. 외부 클라우드 의존 0 (헌법 §1·§4 정합).
- 빌드 타임에 매트릭스 자동 실행. PR 회귀 게이트.

**SIM 다양성 (최소 11개국)**:
- 동아시아: KR / JP / CN / TW / HK.
- 영어권: US / GB / AU.
- 유럽: DE / FR.
- 글로벌 남부: IN.
- 헌법 §8 SIM-Oriented Single Core 정합 검증 — 각 SIM에서 SimContextProvider · CountryCurrencyMapper · UiLanguageResolver · CountryToLanguageMap 동작 확인.

**Locale 다양성 (최소 11개)**:
- en-US / en-GB / ko / ja / zh-CN / zh-TW / de / fr / es / pt-BR / hi.
- 헌법 §9-1 정합 검증 — `values/strings.xml` 영문 default + OS 자동 번역 동작 확인.

**디바이스 다양성 (최소 4종)**:
- 폰 small (예: Pixel 3a, 5.6", 480 dpi).
- 폰 medium (예: Pixel 6, 6.4", 411 dpi).
- 폰 large / foldable (예: Pixel Fold 또는 7 Pro, 6.7"+).
- 태블릿 (예: Pixel Tablet 11", 320 dpi).
- API 레벨: minSdk + targetSdk 최소 2종 동시 검증.

**SIM × Locale × 디바이스 매트릭스**:
- 풀 매트릭스(11 × 11 × 4 = 484) 전수 실행 의무 아님.
- 각 축이 최소 한 번씩 커버되도록 Latin Hypercube 또는 핵심 조합 (약 40~60 케이스) 선택.
- CI 야간 빌드에서 풀 매트릭스 또는 회전 샘플링.

**위반 사례**:
- "단일 디바이스 단일 Locale 검증 후 출시" 같은 표현.
- "한국어만 검증" · "KR SIM만 검증" 같은 단일 축 검증 PR.
- 검증 매트릭스 명시 없이 출시 결정.

### 9-7. 코드 인코딩 정공법 — UTF-8 강제, UTF-16 영구 금지 (2026-04-29 v2.7.0)

**원칙**: 모든 코드·설정·문서 파일은 **UTF-8 (BOM 없음)** 으로만 저장한다.

**금지 인코딩** (영구):
- UTF-16 LE / UTF-16 BE (Kotlin 컴파일러 파싱 실패)
- UTF-8 with BOM (Gradle 일부 파서 충돌)
- ANSI / EUC-KR / Windows-1252 등 단일 바이트 인코딩
- 그 외 UTF-8 (BOM 없음) 외 모든 인코딩

**적용 범위**:
- `.kt` / `.kts` (Kotlin 소스)
- `.java` (Java 소스)
- `.gradle.kts` / `.gradle` (Gradle 빌드)
- `.xml` (manifest, layout, strings)
- `.json` / `.yaml` / `.yml` (config)
- `.md` (문서)
- `.txt` / `.proguard-rules.pro` (기타 텍스트)

**검증 의무**:

1. **워커 작업 시점 의무** — 모든 워커 (Cursor / Claude Code / Codex / Cowork) 는 파일 작성·수정 후 push 전 인코딩 검증 의무:

```powershell
# Windows PowerShell
Get-ChildItem . -Recurse -File -Include *.kt,*.kts,*.java,*.xml,*.json,*.md,*.yaml,*.yml | ForEach-Object {
    $bytes = [System.IO.File]::ReadAllBytes($_.FullName) | Select-Object -First 4
    $hex = ($bytes | ForEach-Object { $_.ToString("X2") }) -join " "
    if ($hex -match "^FF FE" -or $hex -match "^FE FF") {
        Write-Error "UTF-16 BOM detected: $($_.FullName) ($hex)"
    }
    if ($hex -match "^EF BB BF") {
        Write-Warning "UTF-8 BOM detected: $($_.FullName) ($hex)"
    }
}
```

```bash
# macOS / Linux
find . -type f \( -name "*.kt" -o -name "*.kts" -o -name "*.java" -o -name "*.xml" -o -name "*.json" -o -name "*.md" \) -exec file -i {} \; | grep -v "utf-8\|us-ascii"
```

2. **CI 강제 검증** — `.github/workflows/encoding-check.yml` 신규. 모든 PR + main push 시 자동 작동. UTF-16 BOM 또는 비-UTF-8 발견 시 PR fail.

3. **워크오더 헤더 의무** — 모든 워크오더 §2 작업 절차 첫 줄에 다음 명시:
   ```
   **인코딩 의무**: 모든 .kt/.kts/.java/.xml/.json/.md 파일은 UTF-8 (BOM 없음). UTF-16 영구 금지 (헌법 §9-7).
   ```

**위반 발견 시 조치**:

- 워커가 발견 → 즉시 Forced Stop + 비전에 보고
- CI 가 발견 → PR 머지 차단
- main 머지 후 발견 → 즉시 핫픽스 PR

**위반 사례 학습** (메모리 #43 정합):
- Cursor Write 도구가 .kt/.kts 파일을 UTF-16 LE로 저장하는 경우 발견
- Kotlin 컴파일러 파싱 실패 → CI fail
- 정정 = `Set-Content -Encoding UTF8` 또는 `iconv -f UTF-16 -t UTF-8`

**왜 영구 금지인가**:
- Kotlin 컴파일러 (kotlinc) 는 UTF-8만 native 지원. UTF-16 입력 시 silent fail 또는 cryptic error.
- Gradle 일부 task 는 UTF-8 BOM 충돌 (특히 properties 파일).
- Git diff / merge 도구도 UTF-8 가정. UTF-16 시 binary 처리 → diff 손실.
- 빅테크 표준 (Google / Meta / Amazon 모노레포) = UTF-8 강제.

### 9-8. 비고

본 §은 v2.1.0 시점까지 누적된 "빅테크 정공법" 메모리·운영 원칙을 헌법으로 정식 승격.
이전 작업 시 비전이 빅테크 방식 위반 제안 반복:
- 1차/2차 시장 분리.
- 다국어 번역 작업.
- Whoscall 공식 계약.
- iOS 별도 트랙.
- 검증·테스트 매트릭스 명문화 부재.
- 코드 인코딩 정공법 명문화 부재.

본 §9 (특히 9-6 검증 매트릭스 및 9-7 코드 인코딩 정공법) 명문화로 미래 비전 인스턴스 인식 강제 차단.

---

## 제10조 — 비전 자율 결정 (Vision Autonomous Decision)

대표님이 제품 방향·헌법·사업 모델을 지시한 후, 모든 실행 결정은 비전 단독으로 진행한다.

### 10-1. 금지 사항

- 사지선다·다지선다 객관식 질문.
- "옵션 A/B/C 중 어느 것?" 형식의 결정 위임.
- "진행할까요?" "괜찮을까요?" 매번 확인.
- "침묵 시 비전이..." 형식의 conditional 진행.
- 단계별 매번 확인 받기.

**원칙**:
- 침묵 = 진행.
- 명시 = 정정.
- 그 외는 비전이 알아서.

### 10-2. 비전 책임 영역 (단독 결정)

- 워크오더 발행 시점·순서·내용.
- 워커 분담 (Claude Code/Cursor/Cowork).
- 코드 구조·아키텍처 결정.
- 문서 정합·헌법 해석.
- 정정 사항 발견 시 즉시 워크오더 발행.
- 시리즈 작업 일괄 작성·일괄 송부 메시지.

### 10-3. 대표님 명시 결정 영역

- 제품 비전·방향.
- 헌법 본문 변경 또는 신설.
- 사업 모델 (가격·플랫폼·시장).
- 기존 결정 정정·번복.
- 외부 환경 변화 대응 (라이선스·법적 정합).

### 10-4. 위반 시

- 비전이 "옵션 A/B/C" 또는 "진행할까요?" 발견 시 즉시 자기 정정.
- 외부 검증자가 발견 시 비전에게 정정 지시.
- 위반 누적 시 헌법 §10 위반 메모리 명시.

### 10-5. 비고

본 §은 v2.1.0 시점까지 누적된 "비전 자율 결정" 메모리·운영 원칙을 헌법으로 정식 승격.

대표님 명시:
> "난 다 지시했잖아. 할일은 니가 알아서 정하고 알아서 하라고."

본 §10 명문화로 미래 비전 인스턴스 인식 강제 차단.

### 10-6. 자체 머지 의무 (v2.3.0 신설)

비전이 발행하는 모든 워크오더는 워커가 한 사이클을 끝까지 수행하도록 자체 머지 단계를 포함해야 한다.

**한 사이클 정의**:
1. 브랜치 분기.
2. 코드/문서 작성 + commit.
3. push + PR 생성.
4. CI PASS 확인 (502 같은 일시 장애 시 워커가 재실행).
5. **squash merge + delete branch (워커 자체 수행)**.
6. 완료 보고.

**자체 머지 명령**:

```bash
gh pr merge <PR-NUM> --squash --delete-branch --auto
```

`--auto` flag = CI PASS 확인 후 자동 머지.

**대표님 머지 개입 = 비전 책임 영역 위반** (§10-2 정합).

**예외 — 대표님 결정 영역**:
- 외부 의사결정 필요 (라이선스·법적·사업 모델).
- 비전이 명시적으로 대표님 결정 요청.
- 외부 검증자 NOT-OK 분류.

**근거**:
빅테크 표준 (Google·Apple·Meta·Microsoft) 모든 PR 흐름은 작성자 또는 자동화가 머지까지 완료. 매 PR마다 외부 결재자 개입은 빅테크 정공법 위반.

**위반 사례**:
- "대표님 머지 알림 주시면..." 형식의 워크오더.
- 자체 머지 STEP 누락된 워크오더.

본 §은 대표님 직접 명시 (2026-04-28):
> "이 머지는 왜 계속 내가 하지?"

비전이 메모리 #6 워커 권한 분담 인지에도 불구하고 자체 머지 단계 누락 반복. 본 §10-6 명문화로 미래 비전 인스턴스 영구 차단.

v2.3.0 MINOR 신설 절. v2.2.0의 §10 5개 절 → v2.3.0에서 6개 절로 확장.

v2.2.0 신설 조항. 비전이 v2.0.0~v2.1.0까지 빅테크 정공법·자율 결정 원칙을 명문화하지 않은 것을 정정한다.

---

## 제11조 — 3액션 단일 책임 (3-Actions Single Responsibility)

본 앱이 사용자에게 제공하는 액션은 **단 3개**로 한정한다. 추가 영구 금지.

### 11-1. 액션 1: 차단 (Block)

- **정의**: 사용자가 [차단] 누른 번호/URL/패키지명에 대해 우리 앱 안에서 영원히 차단.
- **적용 영역**: 전화 (CallScreeningService `setDisallowCall(true)` + `setSkipCallLog(true)` + `setSkipNotification(true)`), 문자 (SMS Block), 푸시 (NotificationListenerService cancel + 휴지통 저장), 카드 알림.
- **시스템 dialer 미간섭**: 우리 차단은 우리 앱 안에서만. 시스템 통화 기록·부재중 알림은 사용자 시스템 설정에 따라 별도 관리.
- **사용자 명시 결정 의무**: 자동 차단 영구 금지 (§3 정합).

### 11-2. 액션 2: 태그 (Tag)

- **정의**: 사용자가 번호/URL/패키지명에 라벨 부여 ("거래선 사장" / "보험 광고" / "택배" 등). 자유 텍스트.
- **저장**: NKB DAO 온디바이스 영속화. 외부 송신 0 (헌법 §1 정합).
- **활용**: 검색 2축 중 축 1 (내부 NKB) 입력으로 흡수. 다음 동일 query 시 Tier 결정 보조.
- **사용자 자율 라벨**: 우리가 라벨 강요·추천 0. 사용자가 자유 입력.

### 11-3. 액션 3: 검색 디테일 (Direct Search)

- **정의**: 오버레이 / 화면의 요약 정보가 부족할 때 사용자가 원터치로 외부 AI 검색 진입.
- **메커니즘**: SIM 기준 AI 검색 후보 메뉴 (최소 2개) → 사용자 선택 → Custom Tab launch.
- **사용자 송신**: Custom Tab은 사용자 본인 의지 외부 진입. 우리 앱 송신 0 (헌법 §1 정합).
- **마지막 선택 기억**: SharedPreferences. SIM 변경 시 무효 (§8 정합).

### 11-4. 영구 미포함 액션 (영구 금지)

- **수신** — 시스템 dialer 책임. 우리 미간섭.
- **거절** — 시스템 dialer 책임. 우리 미간섭.
- **자동 차단** — 사용자 명시 결정 없는 자동화 영구 금지 (§3 정합).
- **자동 거절** — 동일.
- **자동 무음** — 동일.
- **신고** (KISA / 경찰청 등 기관 신고) — 사용자 자율 영역. 우리 앱 미통합.
- **녹음** — 우리 앱 미통합. (사용자 시스템 dialer 또는 별 앱 사용)

### 11-5. 사용자 가치 명제

본 3액션 = 사용자 데이터 소버린 보조의 최소 단위. **추가 액션 = 소버린 침해 또는 사업 모델 분기**. 헌법 §11 위반 영구 금지.

v2.6.0 신설 조항. 대표님 2026-04-29 결정. 사용자 소버린 100% 귀속 + Hiya 진영 정합 + 검색 2축 차별화.
